UXPROD-3330 TLR data migration feature (#318)
* CIRCSTORE-294 Initial TRL data migration impl

* CIRCSTORE-294 Check module version before migration

* CIRCSTORE-294 Comment version check

* CIRCSTORE-294 Add updater service

* CIRCSTORE-294 Add tests

* CIRCSTORE-294 Fix lombok

* CIRCSTORE-294 Run tests against PostgresTester DB

* CIRCSTORE-294 Refactor

* [CIRCSTORE-295] Update requests in DB after migration

* CIRCSTORE-301 Change JSON schema

* [CIRCSTORE-295] Implementation and tests

* [CIRCSTORE-295] Fix existing tests

* [CIRCSTORE-295] Remove unused methods from OkapiClient

* [CIRCSTORE-295] Include TenantRefAPI into Maven Surefire reports

* [CIRCSTORE-295] Include TenantApiTest into Maven Surefire reports

* [CIRCSTORE-295] Include TenantApiTest into Maven Surefire reports

* [CIRCSTORE-295] Remove redundant constructors

* [CIRCSTORE-295] OkapiClient refactoring

* [CIRCSTORE-295] Rollback transaction upon error

* [CIRCSTORE-295] Fix tests

* [CIRCSTORE-295] Change request level case

* [CIRCSTORE-295] Fix description in request.json

* [CIRCSTORE-295] request level "item" -> "Item"

* CIRCSTORE-309 implemented

* CIRCSTORE-310 Add holdingsRecordId to request record (#311)

* CIRCSTORE-310 Add holdingsRecordId to request schema

* CIRCSTORE-310 Add request level validation

* CIRCSTORE-310 Fix tests

* Add tests on put endpoint

* Refactor

* Rename variables

* Refactor

* CIRCSTORE-310 Add parameters

* CIRCSTORE-310 Refactor

* Add holdingsRecordId and itemId as required

* CIRCSTORE-310 Fix tests

* CIRCSTORE-310 Add holdingsRecordId to request schema

* CIRCSTORE-310 Add request level validation

* CIRCSTORE-310 Fix tests

* Add tests on put endpoint

* Refactor

* Rename variables

* Refactor

* CIRCSTORE-310 Add parameters

* CIRCSTORE-310 Refactor

* Remove redundant interface

* CIRCSTORE-310 Add test for successful case

* CIRCSTORE-310 Refactor
